--- a/modules/metaui-evolution/src/app/app.component.html
+++ b/modules/metaui-evolution/src/app/app.component.html
@@ -5,14 +5,14 @@
     [objectStatusLabel]="'Current page'"
     [objectStatus]="statusName[currentIndex]">
 
-    <aw-page-actions>
+    <!--<aw-page-actions>-->
 
-    </aw-page-actions>
+    <!--</aw-page-actions>-->
 
     <ng-template #pageActions>
         <aw-page-actions>
-            <aw-button [style]="'secondary'" (action)="prev()">Previous</aw-button>
-            <aw-button [style]="'primary'" (action)="next()">Next</aw-button>
+            <aw-button [style]="'secondary'" (action)="prev()">OMG Previous</aw-button>
+            <aw-button [style]="'primary'" (action)="next()">OMG Next</aw-button>
         </aw-page-actions>
     </ng-template>
 
